Fixed password register bug

--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -13,11 +13,11 @@ mixin register()
                             .form-group
                                 label.control-label.col-sm-3(for='new-password') Password:
                                 .col-sm-6
-                                    input#password.form-control(type='new-password', placeholder='Enter Password', name='new-password')
+                                    input#password.form-control(type='password', placeholder='Enter Password', name='new-password')
                             .form-group
                                 label.control-label.col-sm-3(for='re-password') Re-enter Password:
                                 .col-sm-6
-                                    input#re-password.form-control(type='re-password', placeholder='Enter Re-enter Password', name='re-password')
+                                    input#re-password.form-control(type='password', placeholder='Enter Re-enter Password', name='re-password')
                             .form-group
                                 label.control-label.col-sm-3(for='f_name') First Name:
                                 .col-sm-6
