fixed vizualization of preview

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -59,21 +59,26 @@
 }
 
 /* Cretae survey */
+
 .survey-info {
     margin: 0 auto;
     padding: 0.5rem;
-    color:rgba(59, 112, 47, 0.7);
-    
+    color: rgba(59, 112, 47, 0.7);
 }
-.survey-create, .content {
+
+.survey-create,
+.content {
     background-color: #F3F3F3;
 }
+
 .question-wrapper {
     margin: 3px;
 }
+
 .question-title {
     font-size: 2rem;
 }
+
 /* User's surveys visualizations */
 
 .survey-question,
@@ -97,13 +102,12 @@
     text-align: center
 }
 
-<<<<<<< HEAD
 .survey-share .popover-content {
     word-wrap: break-word;
-=======
-.tooltip{
+}
+
+.tooltip {
     min-width: 100px;
->>>>>>> 65223b12ce21e2d7de25a3358c764ed7ff4e7810
 }
 
 .delete-anchor,
@@ -151,7 +155,6 @@ hr {
     margin-right: 10px;
 }
 
-
 .filter-category-container {
     margin-bottom: 10px;
 }
@@ -166,18 +169,17 @@ hr {
 }
 
 .spinner {
-	width: 100px;
-	height: 100px;
+    width: 100px;
+    height: 100px;
     font-size: 100px;
-	position: absolute;
-	top:0;
-	bottom: 0;
-	left: 0;
-	right: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     margin: auto;
     display: none;
     z-index: 99999;
-    
 }
 
 .over {
@@ -187,11 +189,12 @@ hr {
     z-index: 9999;
 }
 
-.bolded { 
+.bolded {
     font-weight: bold;
 }
+
 .answer {
-    margin-left: 10px; 
+    margin-left: 10px;
 }
 
 .survey-create .initial-field {
@@ -204,15 +207,17 @@ hr {
     margin-top: 5px
 }
 */
+
 .add-answer-btn {
     margin-right: 5px
 }
 
-img{
+img {
     width: 90px;
     height: 50px;
 }
-.add-submit{
+
+.add-submit {
     display: none;
 }
 
@@ -221,3 +226,16 @@ img{
         display: none;
     }
 }
+
+.inline-row {
+    display: inline-block;
+}
+
+.ui-slider {
+    margin-bottom: 10px;
+}
+
+.hr{
+    border-bottom: 1px solid #ededee;
+}
+
