--- a/views/preview-survey/preview.pug
+++ b/views/preview-survey/preview.pug
@@ -22,6 +22,8 @@ html(lang="en")
     body
         +loader()
         +nav()
+        div#surveys-container.container-fluid
+                div#main.col-sm-9.col-md-9.col-sm-offset-3.col-md-offset-3
         #submission-survey-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='submit-survey-modalLabel')
             .modal-dialog(role='document')
                 .modal-content
